# Inference-for-RDKx5

./: .gitmodules
autoaim/: .gitignore  cal_data.py  readme.md
autoaim/hbm_img_msgs/: CMakeLists.txt  README_cn.md  package.xml
autoaim/hbm_img_msgs/msg/: HbmMsg1080P.msg
autoaim/install/: local_setup.sh  setup.sh
autoaim/log/: latest_build
autoaim/model/: yolo11_detect_bayese_640x640_nv12.yaml  yolov11workconfig.json
autoaim/model/hb_perf_result/yolo11n_detect_bayese_640x640_nv12/: main_graph_subgraph_0.html  main_graph_subgraph_0.json  yolo11n_detect_bayese_640x640_nv12  yolo11n_detect_bayese_640x640_nv12.html
autoaim/model/work_dir/: main_graph_subgraph_0.json  yolo11n_detect_bayese_640x640_nv12_quant_info.json
autoaim/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
autoaim/rm_auto_aim/armor_detector/include/armor_detector/: aimer.hpp  armor.hpp  armors_shared.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp  yolo.hpp  yolo11.hpp  yolo11_node.hpp
autoaim/rm_auto_aim/armor_detector/include/dnn_node/: dnn_node_data.h  dnn_node_impl.h
autoaim/rm_auto_aim/armor_detector/include/io/: socketcan.hpp
autoaim/rm_auto_aim/armor_detector/src/: aimer.cpp  armor.cpp  armors_shared.cpp  detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp  target.cpp  yolo.cpp  yolo11.cpp  yolo11_node.cpp
autoaim/rm_auto_aim/armor_tracker/src/: tracker.cpp  tracker_node.cpp
autoaim/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
autoaim/rm_vision/: Dockerfile  README.md
autoaim/ros2_hik_camera/: CMakeLists.txt  package.xml
autoaim/ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml
autoaim/ros2_hik_camera/launch/: hik_camera.launch.py
autoaim/ros2_hik_camera/src/: hik_camera_node.cpp
autoaim/vision_attacker/: CMakeLists.txt  package.xml  readme.md
autoaim/vision_attacker/src/: vision_attacker_node.cpp
autoaim/vision_interfaces/: CMakeLists.txt  README.md  package.xml
autoaim/vision_interfaces/msg/: AutoAim.msg  Robot.msg
autoaim/vision_serial_driver/: CMakeLists.txt  README.md  package.xml
autoaim/vision_serial_driver/src/: back.cpp  vision_serial_driver_node.cpp
dnn_benchmark_example/: CHANGELOG.md  CMakeLists.txt  README_cn.md
dnn_benchmark_example/config/: hobot_benchmark_config.json  image.list
dnn_benchmark_example/include/: workflow.h
dnn_benchmark_example/include/input/: data_iterator.h  image_list_data_iterator.h  input_data.h
dnn_benchmark_example/include/plugin/: base_plugin.h  input_plugin.h
dnn_benchmark_example/include/utils/: image_utils.h  pc_queue.h  utils.h
dnn_benchmark_example/src/: main.cpp  workflow.cpp
dnn_benchmark_example/src/input/: data_iterator.cpp  image_list_data_iterator.cpp
dnn_benchmark_example/src/plugin/: base_plugin.cpp  input_plugin.cpp
dnn_benchmark_example/src/utils/: image_utils.cpp  utils.cpp
dnn_node/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
dnn_node/docs/API-Manual/: API-Manual.md
dnn_node/include/: dnn_node.h
dnn_node/include/dnn_node/util/output_parser/: perception_common.h
dnn_node/include/dnn_node/util/output_parser/detection/: fasterrcnn_output_parser.h  fcos_output_parser.h  nms.h
dnn_node/include/dnn_node/util/output_parser/segmentation/: ptq_stdc_output_parser.h
dnn_node/include/libdnn/dnn_node/: dnn_node_data.h  dnn_node_impl.h
dnn_node/include/libdnn/easy_dnn/: common.h  data_structure.h  input_process.h  model.h  model_infer_task.h  model_roi_infer_task.h  task.h
dnn_node/include/ucp/dnn_node/: dnn_node_data.h  dnn_node_impl.h
dnn_node/include/ucp/easy_dnn/: data_structure.h  input_process.h  model.h  model_infer_task.h  model_roi_infer_task.h  task.h
dnn_node/include/util/: image_proc.h
dnn_node/include/util/threads/: threadpool.h
dnn_node/src/: dnn_node.cpp
dnn_node/src/libdnn/: dnn_node_impl.cpp  image_proc.cpp  utils.cpp
dnn_node/src/libdnn/easy_dnn/: input_process.cpp  model.cpp  model_infer_task.cpp  model_roi_infer_task.cpp  task.cpp
dnn_node/src/output_parser/classification/: ptq_classification_output_parser.cpp
dnn_node/src/output_parser/detection/: fasterrcnn_output_parser.cpp  fcos_output_parser.cpp  nms.cpp  ptq_ssd_output_parser.cpp  ptq_yolo10_output_parser.cpp  ptq_yolo2_output_parser.cpp  ptq_yolo3_darknet_output_parser.cpp  ptq_yolo5_output_parser.cpp  ptq_yolo8_output_parser.cpp  ptq_yolov5x_output_parser.cpp
dnn_node/src/output_parser/segmentation/: ptq_stdc_output_parser.cpp  ptq_unet_output_parser.cpp  ptq_yolo8_seg_output_parser.cpp
dnn_node/src/threads/: threadpool.cpp
dnn_node/src/ucp/: dnn_node_impl.cpp  image_proc.cpp  utils.cpp
dnn_node/src/ucp/easy_dnn/: input_process.cpp  model.cpp  model_infer_task.cpp  model_roi_infer_task.cpp  task.cpp
dnn_node/test/: CMakeLists.txt  test.cpp
dnn_node/test/implementation/: implementation.hpp
dnn_node/test/interface/: interface.hpp
dnn_node_example/: CMakeLists.txt  README_cn.md  package.xml
dnn_node_example/config/rdkultra/: mobilenetv2workconfig.json  yolov5workconfig.json
dnn_node_example/config/s100/: mobilenet_unet_workconfig.json  mobilenetv2workconfig.json  yolov10workconfig.json  yolov11workconfig.json  yolov12workconfig.json  yolov2workconfig.json  yolov3workconfig.json  yolov5workconfig.json  yolov8segworkconfig.json  yolov8workconfig.json
dnn_node_example/config/x3/: yolov10workconfig.json  yolov2workconfig.json  yolov3workconfig.json  yolov5workconfig.json  yolov8workconfig.json
dnn_node_example/config/x5/: yolov11workconfig.json
dnn_node_example/include/: dnn_example_node.h  image_utils.h
dnn_node_example/include/post_process/: post_process_unet.h
dnn_node_example/launch/: dnn_node_example.launch.py  dnn_node_example_feedback.launch.py  dnn_node_example_feedback_h264.launch.py  dnn_node_example_mipi_component.launch.py
dnn_node_example/src/: dnn_example_node.cpp  example.cpp  image_utils.cpp
hbm_img_msgs/msg/: HbmMsg1080P.msg
ros2_hik_camera/: CMakeLists.txt  package.xml
ros2_hik_camera/src/: hik_camera_node.cpp
(+92 files in other folders)
